@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2015 the original author or authors.
+ *    Copyright 2009-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,21 +15,20 @@
  */
 package org.apache.ibatis.submitted.dynsql;
 
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import org.apache.ibatis.BaseDataTest;
 import org.apache.ibatis.io.Resources;
-import org.apache.ibatis.jdbc.ScriptRunner;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import org.apache.ibatis.session.SqlSessionFactoryBuilder;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import java.io.Reader;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.sql.Connection;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -38,35 +37,20 @@ public class DynSqlTest {
 
   protected static SqlSessionFactory sqlSessionFactory;
 
-  @BeforeClass
+  @BeforeAll
   public static void setUp() throws Exception {
-    Connection conn = null;
-    try {
-      Reader configReader = Resources.getResourceAsReader("org/apache/ibatis/submitted/dynsql/MapperConfig.xml");
+    try (Reader configReader = Resources.getResourceAsReader("org/apache/ibatis/submitted/dynsql/MapperConfig.xml")) {
       sqlSessionFactory = new SqlSessionFactoryBuilder().build(configReader);
-      configReader.close();
-      conn = sqlSessionFactory.getConfiguration().getEnvironment().getDataSource().getConnection();
-
-      Reader scriptReader = Resources.getResourceAsReader("org/apache/ibatis/submitted/dynsql/CreateDB.sql");
-      ScriptRunner runner = new ScriptRunner(conn);
-      runner.setLogWriter(null);
-      runner.setErrorLogWriter(null);
-      runner.runScript(scriptReader);
-      conn.commit();
-      scriptReader.close();
-
-    } finally {
-      if (conn != null) {
-        conn.close();
-      }
     }
+
+    BaseDataTest.runScript(sqlSessionFactory.getConfiguration().getEnvironment().getDataSource(),
+            "org/apache/ibatis/submitted/dynsql/CreateDB.sql");
   }
 
   @Test
   public void testSelect() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
-      List<Integer> ids = new ArrayList<Integer>();
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+      List<Integer> ids = new ArrayList<>();
       ids.add(1);
       ids.add(3);
       ids.add(5);
@@ -78,16 +62,13 @@ public class DynSqlTest {
       List<Map<String, Object>> answer = sqlSession.selectList("org.apache.ibatis.submitted.dynsql.select", parameter);
 
       assertTrue(answer.size() == 3);
-    } finally {
-      sqlSession.close();
     }
   }
 
   @Test
   public void testSelectSimple() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
-      List<Integer> ids = new ArrayList<Integer>();
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+      List<Integer> ids = new ArrayList<>();
       ids.add(1);
       ids.add(3);
       ids.add(5);
@@ -99,31 +80,24 @@ public class DynSqlTest {
       List<Map<String, Object>> answer = sqlSession.selectList("org.apache.ibatis.submitted.dynsql.select_simple", parameter);
 
       assertTrue(answer.size() == 3);
-    } finally {
-      sqlSession.close();
     }
   }
 
   @Test
   public void testSelectLike() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
 
       List<Map<String, Object>> answer = sqlSession.selectList("org.apache.ibatis.submitted.dynsql.selectLike", "Ba");
 
       assertTrue(answer.size() == 2);
-      assertEquals(new Integer(4), answer.get(0).get("ID"));
-      assertEquals(new Integer(6), answer.get(1).get("ID"));
-
-    } finally {
-      sqlSession.close();
+      assertEquals(Integer.valueOf(4), answer.get(0).get("ID"));
+      assertEquals(Integer.valueOf(6), answer.get(1).get("ID"));
     }
   }
 
   @Test
   public void testNumerics() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       List<NumericRow> answer = sqlSession.selectList("org.apache.ibatis.submitted.dynsql.selectNumerics");
 
       assertTrue(answer.size() == 1);
@@ -139,34 +113,24 @@ public class DynSqlTest {
       assertEquals((Float) 8.0f, row.getRealnumber());
       assertEquals((Float) 9.0f, row.getFloatnumber());
       assertEquals((Double) 10.0, row.getDoublenumber());
-
-    } finally {
-      sqlSession.close();
     }
   }
 
   @Test
   public void testOgnlStaticMethodCall() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       List<Map<String, Object>> answer = sqlSession.selectList("org.apache.ibatis.submitted.dynsql.ognlStaticMethodCall", "Rock 'n Roll");
       assertTrue(answer.size() == 1);
-      assertEquals(new Integer(7), answer.get(0).get("ID"));
-
-    } finally {
-      sqlSession.close();
+      assertEquals(Integer.valueOf(7), answer.get(0).get("ID"));
     }
   }
 
   @Test
   public void testBindNull() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       DynSqlMapper mapper = sqlSession.getMapper(DynSqlMapper.class);
       String description = mapper.selectDescription(null);
       assertEquals("Pebbles", description);
-    } finally {
-      sqlSession.close();
     }
   }
 
